@startuml
hide circle
skinparam classAttributeIconSize 0

class BillDetailController {
    - _billDetailRepository: IBillDetailRepository 

    + CreateBillDetail([FromBody] CreateBillDetailRequestDTO createBillDetail): Task<IActionResult> 
}

interface IBillDetailRepository<<interface>>  {
    + CreateBillDetail(CreateBillDetailRequestDTO createBillDetail): Task<BillDetailResponseDTO> 
}

class BillDetailRepository {
    - _billDetailDAO : BillDetailDAO

    + CreateBillDetail(CreateBillDetailRequestDTO createBillDetail): Task<BillDetailResponseDTO> 

}

class BillDetailDAO {
    - _client: Client
    + CreateBillDetail(CreateBillDetailRequestDTO createBillDetail): Task<BillDetailResponseDTO> 

}

class BillDetail {
    +Id: Guid
    +MenuItemId: Guid
    +BillId: Guid
    +Quantity: int
    +Price: decimal
    +CreatedAt: DateTime
    +UpdatedAt: DateTime
}


BillDetailController -- IBillDetailRepository
IBillDetailRepository <|.. BillDetailRepository
BillDetailRepository -- BillDetailDAO
BillDetailDAO -- BillDetail

@enduml
